--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.0+8
+version: 1.1.2+10
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -31,15 +31,14 @@ dependencies:
   state_notifier: ^0.6.0
   flutter_state_notifier: ^0.6.1
   flutter_riverpod: ^0.12.2
-  settings_ui: ^0.5.0
   gap: ^1.2.0
   sqflite: ^1.3.2+2
-  flutter_keyboard_visibility: ^4.0.3
   sprintf: ^5.0.0
   fluttertoast: ^7.1.6
   firebase_core: ^0.7.0
   firebase_analytics: ^7.0.1
   page_transition: ^1.1.7+6
+  url_launcher: ^5.7.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
